引っ越し時期の入力, 季節係数の反映

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -61,6 +61,11 @@
           <td><span th:text="*{newAddress}"></span></td>
           <input type="hidden" name="newAddress" id="newAddress" th:value="*{newAddress}"/>
         </tr>
+        <tr>
+          <th>引っ越し時期（月）</th>
+          <td><span th:text="*{movingMonth}"></span></td>
+          <input type="hidden" name="movingMonth" id="movingMonth" th:value="*{movingMonth}"/>
+        </tr>
         </tbody>
       </table>
       <h4>荷物情報</h4>
