--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -55,6 +55,23 @@
           <input type="text" id="newAddress" name="newAddress" th:field="*{newAddress}" class="form-control"
                  value="札幌市南区1"/>
         </div>
+        <div class="form-group">
+          <label for="movingMonth">引っ越し時期（月）</label>
+          <select id="movingMonth" name="movingMonth" class="form-control">
+            <option type="text" value="1" th:field="*{movingMonth}" selected>1</option>
+            <option type="text" value="2" th:field="*{movingMonth}">2</option>
+            <option type="text" value="3" th:field="*{movingMonth}">3</option>
+            <option type="text" value="4" th:field="*{movingMonth}">4</option>
+            <option type="text" value="5" th:field="*{movingMonth}">5</option>
+            <option type="text" value="6" th:field="*{movingMonth}">6</option>
+            <option type="text" value="7" th:field="*{movingMonth}">7</option>
+            <option type="text" value="8" th:field="*{movingMonth}">8</option>
+            <option type="text" value="9" th:field="*{movingMonth}">9</option>
+            <option type="text" value="10" th:field="*{movingMonth}">10</option>
+            <option type="text" value="11" th:field="*{movingMonth}">11</option>
+            <option type="text" value="12" th:field="*{movingMonth}">12</option>
+          </select>
+        </div>
       </fieldset>
       <fieldset>
         <legend>荷物情報</legend>
