--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -27,8 +27,13 @@
           <input type="text" id="customerName" name="customerName" th:field="*{customerName}" class="form-control" value="山田太郎" required/>
         </div>
         <div class="form-group">
-          <label for="tel">連絡先TEL (*半角数字)</label>
-          <input type="tel" id="tel" name="tel" th:field="*{tel}" class="form-control" value="03-1234-5678" pattern="^[0-9]+$" required/>
+          <label>連絡先TEL (*半角数字)</label>
+          <div class="form-inline">
+            <input type="tel" name="number1" th:field="*{tel1}" class="form-control" value="001" maxlength='5' size = "3" pattern="^[0-9]+$" required>
+            <b>&nbsp;-&nbsp;</b><input type="tel" name="number2" th:field="*{tel2}" class="form-control" value="001" maxlength='5' size = "3" pattern="^[0-9]+$" required>
+            <b>&nbsp;-&nbsp;</b><input type="tel" name="number3" th:field="*{tel3}" class="form-control" value="001" maxlength='5' size = "3" pattern="^[0-9]+$" required>
+          </div>
+          <font size="2">半角数字で入力してください</font>
         </div>
         <div class="form-group">
           <label for="email">連絡先メールアドレス</label>
