--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -29,8 +29,10 @@
         </tr>
         <tr>
           <th>連絡先TEL</th>
-          <td><span th:text="*{tel}"></span></td>
-          <input type="hidden" name="tel" id="tel" th:value="*{tel}"/>
+          <td><span th:text="*{tel1}+'-'+*{tel2}+'-'+*{tel3}"></span></td>
+          <input type="hidden" name="tel1" th:value="*{tel1}"/>
+          <input type="hidden" name="tel2" th:value="*{tel2}"/>
+          <input type="hidden" name="tel3" th:value="*{tel3}"/>
         </tr>
         <tr>
           <th>連絡先メールアドレス</th>
