ヘッダーにinputページへの遷移追加。

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -10,6 +10,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/">Home</a>
+            <a class="nav-item nav-link active" href="/input">無料お見積もり</a>
         </div>
     </div>
 </nav>
