--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -24,24 +24,24 @@
                 <legend><b>個人情報</b></legend>
                 <div class="form-group">
                     <label for="customerName">氏名</label>
-                    <input type="text" id="customerName" name="customerName" th:field="*{customerName}" class="form-control" value="山田太郎" required/>
+                    <input type="text" id="customerName" name="customerName" th:field="*{customerName}" class="form-control" value="山田太郎" />
                 </div>
                 <div class="form-group">
                     <label>連絡先TEL (*半角数字)</label>
                     <div class="form-inline">
-                        <input type="tel" name="number1" th:field="*{tel1}" class="form-control" value="001" maxlength='3' size = "3" pattern="^[0-9]+$" required>
-                        <b>&nbsp;-&nbsp;</b><input type="tel" name="number2" th:field="*{tel2}" class="form-control" value="001" maxlength='4' size = "3" pattern="^[0-9]+$" required>
-                        <b>&nbsp;-&nbsp;</b><input type="tel" name="number3" th:field="*{tel3}" class="form-control" value="001" maxlength='4' size = "3" pattern="^[0-9]+$" required>
+                        <input type="tel" name="number1" th:field="*{tel1}" class="form-control" value="001" maxlength='3' size = "3" pattern="^[0-9]+$">
+                        <b>&nbsp;-&nbsp;</b><input type="tel" name="number2" th:field="*{tel2}" class="form-control" value="001" maxlength='4' size = "3" pattern="^[0-9]+$">
+                        <b>&nbsp;-&nbsp;</b><input type="tel" name="number3" th:field="*{tel3}" class="form-control" value="001" maxlength='4' size = "3" pattern="^[0-9]+$">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="email">連絡先メールアドレス</label>
-                    <input type="text" id="email" name="email" th:field="*{email}" class="form-control" value="test@test.com" placeholder="test@test.com" pattern="^([0-9A-za-z_\.\-]+@[0-9A-za-z_\.\-]+)$" required/>
+                    <input type="text" id="email" name="email" th:field="*{email}" class="form-control" value="test@test.com" placeholder="test@test.com" pattern="^([0-9A-za-z_\.\-]+@[0-9A-za-z_\.\-]+)$" />
                 </div>
 
                 <div class="form-group">
                     <label for="email">確認用メールアドレス</label>
-                    <input type="text" id="email2" name="email2"  class="form-control" placeholder="test@test.com" pattern="^([0-9A-za-z_\.\-]+@[0-9A-za-z_\.\-]+)$" required oninput="CheckEmail_2(this)"/>
+                    <input type="text" id="email2" name="email2"  class="form-control" placeholder="test@test.com" pattern="^([0-9A-za-z_\.\-]+@[0-9A-za-z_\.\-]+)$" oninput="CheckEmail_2(this)"/>
                 </div>
                 <script language="JavaScript" type="text/javascript">
 <!--
@@ -90,7 +90,7 @@
                 <div class="form-group">
                     <label for="oldPrefectureId">転居元住所（都道府県）</label>
                     <select id="oldPrefectureId" name="oldPrefectureId" class="form-control">
-                        <option th:each="prefecture : ${prefectures}" th:value="${prefecture.prefectureId}" th:field="*{oldPrefectureId}" required>[[${prefecture.prefectureName}]]</option>
+                        <option th:each="prefecture : ${prefectures}" th:value="${prefecture.prefectureId}" th:field="*{oldPrefectureId}">[[${prefecture.prefectureName}]]</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -108,12 +108,12 @@
                 <div class="form-group">
                     <label for="newPrefectureId">転居先住所（都道府県）</label>
                     <select id="newPrefectureId" name="newPrefectureId" class="form-control">
-                        <option th:each="prefecture : ${prefectures}" th:value="${prefecture.prefectureId}" th:field="*{newPrefectureId}" required>[[${prefecture.prefectureName}]]</option>
+                        <option th:each="prefecture : ${prefectures}" th:value="${prefecture.prefectureId}" th:field="*{newPrefectureId}" >[[${prefecture.prefectureName}]]</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="newAddress">転居先住所（市区町村以下）</label>
-                    <input type="text" id="newAddress" name="newAddress" th:field="*{newAddress}" class="form-control" value="札幌市南区1" required/>
+                    <input type="text" id="newAddress" name="newAddress" th:field="*{newAddress}" class="form-control" value="札幌市南区1"/>
                 </div>
             </fieldset>
             <br>
@@ -122,19 +122,19 @@
                 <legend><b>荷物情報</b> </legend>
                 <div class="form-group">
                     <label for="box">段ボールの個数 (*半角数字)</label>
-                    <input type="text" id="box" name="box" th:field="*{box}" class="form-control" value="0" pattern="^[0-9]+$" required maxlength="5"/>
+                    <input type="text" id="box" name="box" th:field="*{box}" class="form-control" value="0" pattern="^[0-9]+$" maxlength="5"/>
                 </div>
                 <div class="form-group">
                     <label for="bed">ベッドの個数 (*半角数字)</label>
-                    <input type="text" id="bed" name="bed" th:field="*{bed}" class="form-control" value="0" pattern="^[0-9]+$" required maxlength="5"/>
+                    <input type="text" id="bed" name="bed" th:field="*{bed}" class="form-control" value="0" pattern="^[0-9]+$" maxlength="5"/>
                 </div>
                 <div class="form-group">
                     <label for="bicycle">自転車の個数 (*半角数字)</label>
-                    <input type="text" id="bicycle" name="bicycle" th:field="*{bicycle}" class="form-control" value="0" pattern="^[0-9]+$" required maxlength="5"/>
+                    <input type="text" id="bicycle" name="bicycle" th:field="*{bicycle}" class="form-control" value="0" pattern="^[0-9]+$" maxlength="5"/>
                 </div>
                 <div class="form-group">
                     <label for="washingMachine">洗濯機の個数 (*半角数字)</label>
-                    <input type="text" id="washingMachine" name="washingMachine" th:field="*{washingMachine}" class="form-control" value="0" pattern="^[0-9]+$" required maxlength="5"/>
+                    <input type="text" id="washingMachine" name="washingMachine" th:field="*{washingMachine}" class="form-control" value="0" pattern="^[0-9]+$" maxlength="5"/>
                 </div>
                 <div class="form-group">
                     <label for="washingMachineInstallation">洗濯機の設置工事申し込み</label>
