--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -11,12 +11,20 @@
 </head>
 <body>
 
+
+
 <nav th:insert="header.html :: header"></nav>
     <div class="jumbotron">
       <div class="container">
         <h1 class="display-1">tiscon moving company</h1>
         <p class="bland-message">未来の景色に鮮やかな彩りを</p>
-        <a class="btn btn-primary btn-top" th:href="@{/input}" role="button">簡単無料見積もりをする</a>
+        <br>
+        <p class="font" style="font-size:15pt"> ↓↓簡単無料見積もりはこちらから！！↓↓</p>
+        <a class="btn btn-primary btn-top" th:href="@{/input}" role="button" style="background-color:rgba( 150,150, 255, 0.4);width:250px;color:black;border:solid;border-radius: 8px;border-color:rgba( 125, 125, 255, 1)">
+          <p style="font-size:25pt">見積もりをする</p>
+          <p style="font-size:15pt;">簡単な見積もりができます</p>
+        </a>
+
       </div>
     </div>
 <script src="../js/jquery-3.5.1.min.js" th:src="@{/js/jquery-3.5.1.min.js}"></script>
