top画面の変更

--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -19,10 +19,14 @@
         <h1 class="display-1">tiscon moving company</h1>
         <p class="bland-message">未来の景色に鮮やかな彩りを</p>
         <br>
-        <p class="font" style="font-size:15pt"> ↓↓簡単無料見積もりはこちらから！！↓↓</p>
-        <a class="btn btn-primary btn-top" th:href="@{/input}" role="button" style="background-color:rgba( 150,150, 255, 0.4);width:250px;color:black;border:solid;border-radius: 8px;border-color:rgba( 125, 125, 255, 1)">
-          <p style="font-size:25pt">見積もりをする</p>
-          <p style="font-size:15pt;">簡単な見積もりができます</p>
+        <p class="font">
+          <span style="font-size:20pt; background-color:rgba(255, 255, 255, 0.5); text-decoration:underline; text-decoration-color:rgba(0, 0, 255, 1);">
+            お引っ越しでお困りではないですか？<br>
+            私たちが全力でサポートします！！ まずは当社にご相談を♪
+          </span>
+        </p>
+        <a class="btn btn-primary btn-top" th:href="@{/input}" role="button" style="background-color:rgba( 0, 0, 255, 0.7); width:250px; color:White; border:solid; border-radius: 10px; border-color:rgba( 0, 0, 255, 1);">
+        <p style="font-size:25pt">無料で簡単！<br>お見積もり</p>
         </a>
 
       </div>
