すべてのボタンのデザインの変更

--- a/src/main/resources/templates/complete.html
+++ b/src/main/resources/templates/complete.html
@@ -17,7 +17,7 @@
       <h2>申し込みが完了しました。</h2>
       <p>お電話にて正確な見積もり結果をお伝えいたします。</p>
       <form th:action="@{/submit}" class="form-horizontal" method="post">
-        <button type="submit" name="backToTop" class="btn btn-primary">TOPへ戻る</button>
+        <button type="submit" name="backToTop" style="background-color:rgba( 0, 0, 255, 0.7); color:White;" class="btn btn-primary">TOPへ戻る</button>
       </form>
     </div>
   </div>
