--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -187,8 +187,8 @@
 
             <div class="form-group">
                 <div class="text-center">
-                    <button type="submit" name="confirm" class="btn btn-primary">確認</button>
-                    <button type="submit" name="backToTop"  class="btn btn-primary" formnovalidate>TOPへ戻る</button>
+                    <button type="submit" name="confirm" style="background-color:rgba( 0, 0, 255, 0.7); color:White;" class="btn btn-primary">確認</button>
+                    <button type="submit" name="backToTop" style="background-color:rgba( 0, 0, 255, 0.7); color:White;" class="btn btn-primary" formnovalidate>TOPへ戻る</button>
                 </div>
             </div>
         </div>
