--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -25,7 +25,7 @@
             私たちが全力でサポートします！！ まずは当社にご相談を♪
           </span>
         </p>
-        <a class="btn btn-primary btn-top" th:href="@{/input}" role="button" style="background-color:rgba( 0, 0, 255, 0.7); width:250px; color:White; border:solid; border-radius: 10px; border-color:rgba( 0, 0, 255, 1);">
+        <a class="btn btn-primary btn-top" th:href="@{/input}" role="button" style="background-color:rgba( 0, 0, 255, 0.7); color:White; width:250px; border:solid; border-radius: 10px; border-color:rgba( 0, 0, 255, 1);">
         <p style="font-size:25pt">無料で簡単！<br>お見積もり</p>
         </a>
 
