--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -134,8 +134,8 @@
       </table>
       <div class="form-group">
         <div class="text-center">
-          <button type="submit" name="backToInput" class="btn btn-primary">修正</button>
-          <button type="submit" name="calculation" class="btn btn-primary">概算見積もりをする</button>
+          <button type="submit" name="calculation" style="background-color:rgba( 0, 0, 255, 0.7); color:White;" class="btn btn-primary">概算見積もりをする</button>
+          <button type="submit" name="backToInput" style="background-color:rgba( 0, 0, 255, 0.7); color:White;" class="btn btn-primary">修正</button>
         </div>
       </div>
     </div>
