--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -104,8 +104,8 @@
       </table>
       <div class="form-group">
         <div class="text-center">
-          <button type="submit" name="backToConfirm" class="btn btn-primary">戻る</button>
-          <button type="submit" name="complete" class="btn btn-primary">詳細見積もり依頼</button>
+          <button type="submit" name="complete" style="background-color:rgba( 0, 0, 255, 0.7); color:White;" class="btn btn-primary">詳細見積もり依頼</button>
+          <button type="submit" name="backToConfirm" style="background-color:rgba( 0, 0, 255, 0.7); color:White;" class="btn btn-primary">戻る</button>
         </div>
       </div>
     </div>
