セレクトボックスの見た目変更

--- a/src/main/resources/templates/input.html
+++ b/src/main/resources/templates/input.html
@@ -76,7 +76,7 @@
 
                 <div class="form-group">
                     <label for="movingMonth">引っ越し時期（月）</label><br>
-                    <select id="movingMonth" name="movingMonth" class="form-control">
+                    <select id="movingMonth" name="movingMonth" class="form-control-sm">
                         <option type="text" value="1" th:field="*{movingMonth}" selected>1</option>
                         <option type="text" value="2" th:field="*{movingMonth}">2</option>
                         <option type="text" value="3" th:field="*{movingMonth}">3</option>
